# compli

./: .gitignore  Cargo.toml  README.md  flake.nix  run.sh  runtime.c
editor/emacs/: compli-mode.el
editor/vim/ftdetect/: compli.vim
editor/vim/syntax/: compli.vim
examples/: approx-pi.compli  calculator.compli  casting.compli  example.compli  fib.compli  input.compli  language-tour.compli  minimal.compli  quadratic-formula.compli  records.compli  test.compli  trace.compli
rts/: main.c  rt.c
src/: ast.rs  builtin.rs  cli.rs  codegen.rs  ir.rs  lib.rs  lowering.rs  main.rs  type_checking.rs  variable.rs
src/common/: ident.rs  mod.rs  typ.rs
src/parsing/: ast.rs  lexer.rs  mod.rs  parser.rs
src/util/: mod.rs  span.rs  variable.rs
tests/: compilation-tests.rs  examples.rs  fails.rs  lowering-tests.rs  parsing-tests.rs  typing-tests.rs
tests/common/: mod.rs
tests/fails/: fail_lexing.compli  fail_lowering.compli  fail_parsing.compli  fail_typechecking.compli
tests/goldenfiles/compilation/: minimal.golden
tests/goldenfiles/lowering/: complex-let.golden  minimal.golden
tests/goldenfiles/parsing/: complex-let.golden  minimal.golden
tests/goldenfiles/typing/: complex-let.golden  minimal.golden
tests/testfiles/: complex-let.compli  minimal.compli
