[package]
name = "compli"
version = "0.1.0"
edition = "2021"

[dependencies]
chumsky = "0.9.3"
clap = { version = "4.5.23", features = ["derive"] }
inkwell = { version = "0.5.0", features = ["llvm18-0"] }
llvm-sys-180 = { package = "llvm-sys", version = "180", features = ["prefer-static"] }
miette = { version = "7.4.0", features = ["fancy"] }
thiserror = "2.0.9"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
