[package]
name = "compli"
version = "0.1.0"
authors = ["Rasmus Buurman <rasmus@rbuurman.de>"]
edition = "2021"
description = "My compiler for PLI"
readme = "README.md"
license = "MIT"

[dependencies]

# error handling
thiserror = "2.0.11"
miette = { version = "7.5.0", features = ["fancy"] }

# logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# CLI parsing
clap = { version = "4.5.30", features = ["derive"] }

# parser combinators library
chumsky = "0.9.3"

# LLVM code generation
inkwell = { version = "0.5.0", features = ["llvm18-0"] }
llvm-sys-180 = { package = "llvm-sys", version = "180", features = ["prefer-static"] }

# pretty printing of tree structures
ptree = { version = "0.5.2", default-features = false }
